# busel-ai

./: .gitignore  AGENTS.md  BUSEL_SCALE_PLAN.md  CHANGELOG.md  Cargo.toml  IMPLEMENTATION_PLAN.md  INFO.md  ISSUES.md  README.md  RESEARCH_NOTES.md  bench_bs.sh  busel_logging.py  busel_registry.py  cli.py  dump.sh  project_dump.md  pyproject.toml  session-ses_10f9.md  test_diagnose.py  train.py
.github/workflows/: deploy.yml
burn_migration/: Cargo.toml  README.md
burn_migration/src/: ckpt.rs  config.rs  curriculum.rs  data.rs  decoupled_lr.rs  dropbp.rs  grad_clip.rs  logs.rs  loss.rs  main.rs  mask.rs  optim_wrapper.rs  pipeline.rs  profiler.rs  schedule_free.rs  test_slowdown.rs  train.rs  tui.rs  types.rs
burn_migration/src/cube/: bridge.rs  bridge_test.rs  gdn2.rs  gdn2_kernel.rs  gdn2_op.rs  mod.rs
burn_migration/src/model/: bitlinear.rs  cube_opt.rs  gdn2.rs  hybrid.rs  mar.rs  mla.rs  mod.rs  moe.rs  mtp.rs  patcher.rs  routing_free.rs  sct.rs  serope.rs
busel_rust_io/: Cargo.toml  lib.rs
busel_rust_io/busel/: __init__.py
bysel.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
configs/: busel-365m.yaml  chizh-9m.yaml  default.yaml  kruk-210m.yaml  sokal-120m.yaml  verabey-40m.yaml  vorobey.yaml
configs/pipelines/: bench-shpak.yaml  busel-365m.yaml  chizh-9m.yaml  gigabep-test.yaml  kruk-210m.yaml  pretrain-only.yaml  pretrain-sft.yaml  sft-only.yaml  sokal-120m.yaml  sovereign-340m.yaml  sovereign-5h.yaml  verabey-40m.yaml  verabey-67m.yaml
data/: AGENTS.md  dpo.py  pipeline.py  presets.py  sft.py
docs/: astro.config.mjs
docs/src/content/docs/: index.mdx
model/: AGENTS.md  attention.py  backbone.py  checkpoint.py  gdn2.py  gdn2_chunk.py  gdn2_kda.py  layers.py  patching.py  routing.py  triton2.py  triton_fused.py
multimodal/: AGENTS.md  __init__.py  encoders.py  special_tokens.py
scripts/: launch_340m.sh  setup.sh
services/: AGENTS.md  inference_api.py
site/: AGENTS.md  README.md  astro.config.mjs
src/: lib.rs
src/bysel/: __init__.py
telegram_bot/: bot.py  setup_wizard.py  state_manager.py  telegram_bot.py
tests/: AGENTS.md  bench_full.py  bench_shpak.py  debug.py  debug_muon_nan.py  diagnose_nan.py  find_lr.py  profiler_run.py  repro_nan.py  scale_profile_3sizes.py  scan_nan_batch.py  shpak_profile_5runs.py  speed_profile.py  test_suite.py  v58_profile.py  v63_profile.py
tools/: AGENTS.md  data_manager.py  eval.py  inference.py  orchestrator.py  plotter.py  tool_executor.py
training/: AGENTS.md  autopilot.py  optimizer.py  recipe.py
training/stages/: __init__.py  base.py  dpo.py  eval.py  grpo.py  pretrain.py  pretrain_config.py  sft.py
ui/: AGENTS.md  __init__.py  animation.py  cli.py  teto.py
(+24 files in other folders)
