[project]
name = "bysel"
version = "0.1.0"
description = "Bysel - Sovereign 1-bit Omni-LLM"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiogram>=3.28.2",
    "fastapi>=0.136.3",
    "flash-linear-attention>=0.5.0",
    "maturin>=1.13.3",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "pyyaml>=6.0.3",
    "torch>=2.12.0",
    "typer>=0.26.4",
    "uvicorn>=0.48.0",
]

# ДОБАВЬТЕ ЭТУ СЕКЦИЮ:
[tool.setuptools.packages.find]
where = ["."]
include = ["data*", "model*", "training*", "tests*"]

[build-system]
requires = ["setuptools>=61.0", "maturin>=1.13.3"]
build-backend = "setuptools.build_meta"
