[project]
name = "bysel"
version = "4.0.0"
description = "Bysel - Sovereign 1-bit Omni-LLM"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.28.2",
    "fastapi>=0.136.3",
    "flash-linear-attention>=0.5.0",
    "maturin>=1.13.3",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "pyyaml>=6.0.3",
    "torch>=2.12.0",
    "typer>=0.26.4",
    "uvicorn>=0.48.0",
    "pillow"
]

[build-system]
requires = ["maturin>=1.13.3,<2.0"]
build-backend = "maturin"

[tool.maturin]
module-name = "bysel_rust_io"
features = ["pyo3/extension-module"]