[package]
name = "busel-burn"
version = "0.1.0"
edition = "2021"

[features]
default = ["cuda"]
cuda = []


[profile.release]
lto = "thin"
codegen-units = 256
strip = "symbols"
panic = "abort"

[patch.crates-io]
burn-autodiff = { path = "vendor/burn-autodiff" }

[dependencies]
burn = { version = "0.21", default-features = false, features = ["std", "cuda", "autodiff", "train", "tui"] }
burn-cuda = { version = "0.21", default-features = false, features = ["std"] }
memmap2 = "0.9"
rand = "0.10.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
cubecl = { version = "0.10", default-features = false, features = ["cuda"] }
burn-cubecl = { version = "0.21", default-features = false }
half = "2.7.1"
cubecl-zspace = "0.10.0"
burn-backend = "0.21.0"

